# CPP_Build_Toolchain

./: README.md
CMake/: README.md
CMake/SampleProjects/01_HelloWorld/: CMakeLists.txt
CMake/SampleProjects/02_BuildSubDirs/: CMakeLists.txt  main.cpp  simple_math.cpp  simple_math.h
CMake/SampleProjects/02_BuildSubDirs/opensource/: CMakeLists.txt
CMake/SampleProjects/03_BuildSubDirs/: simple_algo.cpp
CMake/SampleProjects/03_BuildSubDirs/opensource/simplecrypto/: binary.h
CMake/SampleProjects/03_LocationService/: CMakeLists.txt
CMake/SampleProjects/03_LocationService/core/nmeaparser/: CMakeLists.txt
CMake/SampleProjects/04_LocationService/: gcc_compile_service_and_static_lib.sh
CMake/SampleProjects/04_LocationService/service/: LocationService.cpp
CMake/SampleProjects/LocationService/service/: LocationService.h
GNU_Autotools/: README.md
GNU_Autotools/SampleProjects/01_HelloWorld/: ChangeLog  Makefile.am  configure.ac
GNU_Autotools/SampleProjects/01_MultipleSourceFiles/: main.cpp
GNU_Autotools/SampleProjects/02_LocationService/core/nmeaparser/src/: time.cpp
GNU_Autotools/SampleProjects/02_MultipleSourceFiles/: simple_algo.h
GNU_Autotools/SampleProjects/02_MultipleSourceFiles/opensource/simplecrypto/: simplecrypto.h
GNU_Autotools/SampleProjects/02_jsoncpp_lib/: Makefile.am  configure.ac
GNU_Autotools/SampleProjects/03_LocationService/: Makefile.am  configure.ac  main.cpp
GNU_Autotools/SampleProjects/03_LocationService/core/jsoncpp/: Makefile.am
GNU_Autotools/SampleProjects/03_LocationService/core/nmeaparser/: AUTHORS  ChangeLog  Makefile.am  configure.ac
GNU_Autotools/SampleProjects/03_jsoncpp_lib/: gcc_compile_static_lib.sh
GNU_Autotools/SampleProjects/HelloWorld/: gcc_compile_program.sh
GNU_GCC/: README.md  overview.md
GNU_GCC/SampleProjects/01_HelloWorld/: gcc_compile_command.sh  gcc_compile_step_by_step.sh
GNU_GCC/SampleProjects/02_MultipleSourceFiles/: gcc_compile_program.sh  main.cpp
GNU_GCC/SampleProjects/02_MultipleSourceFiles/opensource/lib/: libsimplecrypto.dylib
GNU_GCC/SampleProjects/02_MultipleSourceFiles/opensource/simplecrypto/: gcc_compile_shared_obj.sh
GNU_GCC/SampleProjects/03_jsoncpp_lib/: gcc_compile_shared_obj.sh  gcc_compile_static_lib.sh
GNU_GCC/SampleProjects/03_jsoncpp_lib/test/: gcc_compile_with_shared_obj.sh  gcc_compile_with_static_lib.sh  main  main.cpp
GNU_GCC/SampleProjects/04_LocationService/: gcc_compile_project.sh
GNU_GCC/SampleProjects/05_OptimziationExamples/: gcc_compile_full_optimization.sh  gcc_compile_no_optimization.sh
GNU_Make/: Makefile  README.md  overview.md
GNU_Make/SampleProjects/01_HelloWorld/: Makefile  main.cpp
GNU_Make/SampleProjects/02_MultipleSourceFiles/: Makefile
GNU_Make/SampleProjects/02_MultipleSourceFiles/opensource/simplecrypto/: md5.c  tea.c
GNU_Make/SampleProjects/03_LocationService/: Makefile
GNU_Make/SampleProjects/03_LocationService/core/jsoncpp/: Makefile
GNU_Make/SampleProjects/03_LocationService/core/nmeaparser/: Makefile
GNU_Make/SampleProjects/03_jsoncpp_lib/: gcc_compile_shared_obj.sh
GNU_Make/SampleProjects/LocationService/core/nmeaparser/src/: parser.cpp
MakePractice/: Makefile  defs.h  funcs.cpp  funcs.h  main.cpp
SampleProject/: SampleProject  main.cpp
SampleProject/core/nmeaparser/src/: context.cpp  generate.cpp  generator.cpp  gmath.cpp  info.cpp  parse.cpp  parser.cpp  sentence.cpp  time.cpp  tok.cpp
SampleProject/service/: LocationService.cpp  LocationService.h
SampleProjects/HelloWorld/: gcc_compile_command.md
